Added a section for DMACC to the Education page. I also set it up so that the school sections would be displayed in a column

--- a/css/education.css
+++ b/css/education.css
@@ -21,6 +21,12 @@
     padding: 10px;
 }
 
+.educationSchools .column{
+    margin: 10px;
+    display: inline-block;
+    vertical-align: top; 
+}
+
 img{
     border: 5px solid #006F73;
     float: left;
@@ -35,5 +41,6 @@ p{
     float:none;
     position: relative;
     right: -20px;
+    font-size: 130%;
 }
 
