Got the project to a state where I was comfortable putting it online. I used 000webhost to make the website. I will likely continue to do work on it howerver

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,5 +24,9 @@ body{
 }
 
 .mainNav a:hover{
-    background-color: #FC68B4
+    background-color: #FC68B4;
+    text-decoration: underline dotted;
 }
+
+img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {
+    display: none;}
